--- a/builders-bench/linux/builder-mise.hm.yml
+++ b/builders-bench/linux/builder-mise.hm.yml
@@ -6,11 +6,13 @@ on:
         required: true
       ref:
         required: true
+      runner:
+        required: false
       task:
         required: false
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ${{ inputs.runner || 'ubuntu-24.04' }}
     steps:
       - uses: actions/checkout@v4
         with:
