--- a/builders-bench/linux/builder-mise.hm.yml
+++ b/builders-bench/linux/builder-mise.hm.yml
@@ -8,6 +8,8 @@ on:
         required: true
       runner:
         required: false
+      env:
+        required: false
       task:
         required: false
 jobs:
@@ -17,6 +19,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
+      - name: Import env
+        run: |
+          echo '${{ inputs.env }}' | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
       - run: |
           set -euo pipefail
           task="${{ inputs.task }}"
