builders-bench: add #HM trigger/workflow metadata headers for metadata-driven dispatch
💘 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/builders-bench/linux/builder-configure-make.hm.yml
+++ b/builders-bench/linux/builder-configure-make.hm.yml
@@ -1,3 +1,4 @@
+#HM trigger="configure" workflow=".github/workflows/builder-configure-make.yml"
 name: Builder-Configure-Make
 on:
   workflow_dispatch:
