--- a/builders-bench/linux/builder-configure-make.hm.yml
+++ b/builders-bench/linux/builder-configure-make.hm.yml
@@ -1,4 +1,4 @@
-#HM trigger="configure" workflow=".github/workflows/builder-configure-make.yml"
+#HM trigger="configure"
 name: Builder-Configure-Make
 on:
   workflow_dispatch:
