--- a/builders-bench/linux/builder-mise.hm.yml
+++ b/builders-bench/linux/builder-mise.hm.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Import env
         run: |
           echo '${{ inputs.env }}' | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
-      - run: |
+      - name: mise run
+        run: |
           set -euo pipefail
           task="${{ inputs.task }}"
           if [[ -n "$task" ]]; then
@@ -31,3 +32,20 @@ jobs:
           else
             mise run -C "${{ inputs.pipeline }}" build
           fi
+      - name: Post-build hooks
+        run: |
+          set -euo pipefail
+          for dir in ".github/hooks/post-build.d" "${{ inputs.pipeline }}/hooks/post-build.d"; do
+            if [[ -d "$dir" ]]; then
+              for f in "$dir"/*; do
+                [[ -f "$f" && -x "$f" ]] || continue
+                "$f"
+              done
+            fi
+          done
+      - name: Prepare payload
+        run: |
+          set -euo pipefail
+          env_json=$(awk -F= '/=/{print $1}' "$GITHUB_ENV" | jq -Rn '[inputs] as $k | reduce $k[] as $x ({}; . + {($x): env[$x]})')
+          sed -i '/^env_json=/d' "$GITHUB_ENV"
+          echo "env_json=$env_json" >> "$GITHUB_ENV"
