--- a/builders-bench/linux/builder-buildah.hm.yml
+++ b/builders-bench/linux/builder-buildah.hm.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Import env
         run: |
           echo '${{ inputs.env }}' | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
-      - run: |
+      - name: buildah bud
+        run: |
           set -euo pipefail
           PIPELINE="${{ inputs.pipeline }}"
           IMAGE_TAG="${IMAGE_TAG:-${GITHUB_REF_NAME}}"
@@ -30,3 +31,20 @@ jobs:
           ref="${REGISTRY:+$REGISTRY/}${IMAGE_PATH}:$IMAGE_TAG"
           buildah bud -t "$ref" -f "$PIPELINE/Containerfile" "$PIPELINE"
           echo "IMAGE_REF=$ref" >> "$GITHUB_OUTPUT"
+      - name: Post-build hooks
+        run: |
+          set -euo pipefail
+          for dir in ".github/hooks/post-build.d" "${{ inputs.pipeline }}/hooks/post-build.d"; do
+            if [[ -d "$dir" ]]; then
+              for f in "$dir"/*; do
+                [[ -f "$f" && -x "$f" ]] || continue
+                "$f"
+              done
+            fi
+          done
+      - name: Prepare payload
+        run: |
+          set -euo pipefail
+          env_json=$(awk -F= '/=/{print $1}' "$GITHUB_ENV" | jq -Rn '[inputs] as $k | reduce $k[] as $x ({}; . + {($x): env[$x]})')
+          sed -i '/^env_json=/d' "$GITHUB_ENV"
+          echo "env_json=$env_json" >> "$GITHUB_ENV"
