--- a/builders-bench/linux/builder-gradle.hm.yml
+++ b/builders-bench/linux/builder-gradle.hm.yml
@@ -34,3 +34,20 @@ jobs:
           pushd "${{ inputs.pipeline }}" >/dev/null
           if [[ -x ./gradlew ]]; then ./gradlew test --no-daemon; else gradle test --no-daemon; fi
           popd >/dev/null
+      - name: Post-build hooks
+        run: |
+          set -euo pipefail
+          for dir in ".github/hooks/post-build.d" "${{ inputs.pipeline }}/hooks/post-build.d"; do
+            if [[ -d "$dir" ]]; then
+              for f in "$dir"/*; do
+                [[ -f "$f" && -x "$f" ]] || continue
+                "$f"
+              done
+            fi
+          done
+      - name: Prepare payload
+        run: |
+          set -euo pipefail
+          env_json=$(awk -F= '/=/{print $1}' "$GITHUB_ENV" | jq -Rn '[inputs] as $k | reduce $k[] as $x ({}; . + {($x): env[$x]})')
+          sed -i '/^env_json=/d' "$GITHUB_ENV"
+          echo "env_json=$env_json" >> "$GITHUB_ENV"
