--- a/builders-bench/linux/builder-configure-make.hm.yml
+++ b/builders-bench/linux/builder-configure-make.hm.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
+
       - name: Import env
         run: |
           echo '${{ inputs.env }}' | jq -r 'to_entries[]|"\(.key)=\(.value)"' >> "$GITHUB_ENV"
@@ -26,10 +27,12 @@ jobs:
             echo "BUILDER=$builder_name"
             echo "TECH=${builder_name#*-}"
           } >> "$GITHUB_ENV"
+
       - name: Pre-build hooks
         run: |
           set -euo pipefail
           find hooks/pre-build.d hooks/${TECH}/pre-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
+
       - name: configure && make
         run: |
           set -euo pipefail
@@ -38,13 +41,22 @@ jobs:
           ./configure
           make -j"$(nproc)"
           popd >/dev/null
+
       - name: Post-build hooks
         run: |
           set -euo pipefail
           find hooks/post-build.d hooks/${TECH}/post-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
+
       - name: Prepare payload
         run: |
           set -euo pipefail
           env_json=$(awk -F= '/=/{print $1}' "$GITHUB_ENV" | jq -Rn '[inputs] as $k | reduce $k[] as $x ({}; . + {($x): env[$x]})')
           sed -i '/^env_json=/d' "$GITHUB_ENV"
           echo "env_json=$env_json" >> "$GITHUB_ENV"
+
+      - name: Harbour Master Dispatch
+        uses: ./.github/workflows/harbour-master.hm.yml
+        with:
+          pipeline: ${{ inputs.pipeline }}
+          ref: ${{ inputs.ref }}
+          env: ${{ env.env_json }}
