--- a/the-coopers-inn/linux/builder-maven.hm.yml
+++ b/the-coopers-inn/linux/builder-maven.hm.yml
@@ -61,6 +61,7 @@ jobs:
           echo "env_json=$env_json" >> "$GITHUB_ENV"
 
       - name: Harbour Master Dispatch
+        # workflow path conforms to .github/workflows/<worker>.hm.yml
         uses: ./.github/workflows/harbour-master.hm.yml
         with:
           pipeline: ${{ inputs.pipeline }}
