--- a/the-coopers-inn/linux/builder-buildah.hm.yml
+++ b/the-coopers-inn/linux/builder-buildah.hm.yml
@@ -1,5 +1,5 @@
-#HM trigger="docker-compose.yml"
-name: Builder-Compose
+#HM trigger="Containerfile" workflow=".github/workflows/builder-buildah.yml"
+name: Builder-Buildah
 on:
   workflow_dispatch:
     inputs:
@@ -33,10 +33,16 @@ jobs:
           set -euo pipefail
           find hooks/pre-build.d hooks/${TECH}/pre-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
 
-      - name: docker compose build
+      - name: buildah bud
         run: |
           set -euo pipefail
-          docker compose -f "${{ inputs.pipeline }}/docker-compose.yml" build
+          PIPELINE="${{ inputs.pipeline }}"
+          IMAGE_TAG="${IMAGE_TAG:-${GITHUB_REF_NAME}}"
+          REGISTRY="${REGISTRY:-}"
+          IMAGE_PATH="${IMAGE_PATH:-$(basename "$(dirname "$PIPELINE")")/$(basename "$PIPELINE")}"
+          ref="${REGISTRY:+$REGISTRY/}${IMAGE_PATH}:$IMAGE_TAG"
+          buildah bud -t "$ref" -f "$PIPELINE/Containerfile" "$PIPELINE"
+          echo "IMAGE_REF=$ref" >> "$GITHUB_OUTPUT"
 
       - name: Post-build hooks
         run: |
@@ -51,6 +57,7 @@ jobs:
           echo "env_json=$env_json" >> "$GITHUB_ENV"
 
       - name: Harbour Master Dispatch
+        # workflow path conforms to .github/workflows/<worker>.hm.yml
         uses: ./.github/workflows/harbour-master.hm.yml
         with:
           pipeline: ${{ inputs.pipeline }}
