--- a/the-coopers-inn/linux/builder-docker.hm.yml
+++ b/the-coopers-inn/linux/builder-docker.hm.yml
@@ -1,5 +1,5 @@
-#HM trigger="configure"
-name: Builder-Configure-Make
+#HM trigger="Dockerfile"
+name: Builder-Docker
 on:
   workflow_dispatch:
     inputs:
@@ -33,14 +33,17 @@ jobs:
           set -euo pipefail
           find hooks/pre-build.d hooks/${TECH}/pre-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
 
-      - name: configure && make
+      - name: Build image
+        id: build
         run: |
           set -euo pipefail
-          pushd "${{ inputs.pipeline }}" >/dev/null
-          chmod +x ./configure || true
-          ./configure
-          make -j"$(nproc)"
-          popd >/dev/null
+          PIPELINE="${{ inputs.pipeline }}"
+          IMAGE_TAG="${IMAGE_TAG:-${GITHUB_REF_NAME}}"
+          REGISTRY="${REGISTRY:-}"
+          IMAGE_PATH="${IMAGE_PATH:-$(basename "$(dirname "$PIPELINE")")/$(basename "$PIPELINE")}"
+          ref="${REGISTRY:+$REGISTRY/}${IMAGE_PATH}:$IMAGE_TAG"
+          docker build -t "$ref" "$PIPELINE"
+          echo "IMAGE_REF=$ref" >> "$GITHUB_OUTPUT"
 
       - name: Post-build hooks
         run: |
@@ -55,6 +58,7 @@ jobs:
           echo "env_json=$env_json" >> "$GITHUB_ENV"
 
       - name: Harbour Master Dispatch
+        # workflow path conforms to .github/workflows/<worker>.hm.yml
         uses: ./.github/workflows/harbour-master.hm.yml
         with:
           pipeline: ${{ inputs.pipeline }}
