--- a/the-coopers-inn/linux/builder-node.hm.yml
+++ b/the-coopers-inn/linux/builder-node.hm.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Pre-build hooks
         run: |
           set -euo pipefail
-          find hooks/pre-build.d hooks/${TECH}/pre-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
+          find hooks/pre-build.d hooks/${TECH}/pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null
 
       - name: npm build
         run: |
@@ -51,7 +51,7 @@ jobs:
       - name: Post-build hooks
         run: |
           set -euo pipefail
-          find hooks/post-build.d hooks/${TECH}/post-build.d -type f -perm -u+x 2>/dev/null -print0 | xargs -0 -r -n1 sh -c '"$0"'
+          find hooks/post-build.d hooks/${TECH}/post-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null
 
       - name: Prepare payload
         run: |
